ansible/100-exemplos/files/contador/04-contador-service.yml
apiVersion: v1
kind: Service
metadata:
  name: contador-svc
  namespace: exemplos
  labels:
    app: contador-pvc
spec:
  selector:
    app: contador-app
  ports:
    - port: 80
      targetPort: 80
      protocol: TCP
