ansible/100-exemplos/files/contador/05-contador-ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: contador-ingress
  namespace: exemplos
  labels:
    app: contador-pvc
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  ingressClassName: nginx
  rules:
    - http:
        paths:
          - path: /contador
            pathType: Prefix
            backend:
              service:
                name: contador-svc
                port:
                  number: 80
